# paddle-spotify

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  python_improvements.md  requirements.txt  run.sh
paddle/downloader/: __init__.py  __main__.py  client.py  config.py  importer.py  main.py  models.py  playlist.py  records.py  session.py
sql_answers/: sql_question_1.sql  sql_question_2.sql
tests/: test_importer.py
tests/data/: __init__.py  artists.py  images.py  markets.py  playlists.py  tracks.py  users.py
