[tool.poetry]
name = "paddle"
version = "0.1.0"
description = ""
authors = ["Redacted <redacted>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.0.2"
requests-ratelimiter = "^0.4.0"

[tool.poetry.scripts]
downloader = "paddle.downloader:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
responses = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
